<resources>
    <string name="app_name">MyPlaces</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="button_text_save">SAVE</string>
    <string name="text_no_item_note">No places found. Press plus icon to add a new place.</string>
    <string name="image_content_description">image</string>
</resources>