<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewPlaceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddNewPlace"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddNewPlace"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/main_content_padding">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTitle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextTitle"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/edit_text_text_size"
                    android:textColorHint="@color/secondary_text"
                    android:textColor="@color/primary_text"
                    android:inputType="textCapWords"
                    android:hint="@string/edit_text_hint_title"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDescription"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/add_screen_til_marginTop">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextDescription"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/edit_text_text_size"
                    android:textColorHint="@color/secondary_text"
                    android:textColor="@color/primary_text"
                    android:inputType="textCapSentences"
                    android:hint="@string/edit_text_hint_description"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDate"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/add_screen_til_marginTop">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextDate"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/edit_text_text_size"
                    android:textColorHint="@color/secondary_text"
                    android:textColor="@color/primary_text"
                    android:inputType="text"
                    android:hint="@string/edit_text_hint_date"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLocation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/add_screen_til_marginTop">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextLocation"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/edit_text_text_size"
                    android:textColorHint="@color/secondary_text"
                    android:textColor="@color/primary_text"
                    android:inputType="text"
                    android:hint="@string/edit_text_hint_location"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewPlaceImage"
                android:layout_height="@dimen/add_screen_place_image_size"
                android:layout_width="@dimen/add_screen_place_image_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLocation"
                android:background="@drawable/shape_image_view_border"
                android:padding="@dimen/add_screen_place_image_padding"
                android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
                app:layout_constraintHorizontal_bias="0.0"
                android:src="@drawable/add_screen_image_placeholder"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/textViewAddImage"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintVertical_bias="0.019"
                app:layout_constraintStart_toEndOf="@+id/imageViewPlaceImage"
                app:layout_constraintBottom_toTopOf="@+id/buttonSave"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLocation"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/add_screen_text_add_image_padding"
                android:textSize="@dimen/add_screen_text_add_image_textSize"
                android:textColor="@color/color_on_primary"
                android:layout_marginTop="@dimen/add_screen_text_add_image_marginTop"
                android:textStyle="bold"
                android:text="@string/text_add_image"
                android:gravity="center"/>

            <Button
                android:id="@+id/buttonSave"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPlaceImage"
                android:background="@drawable/shape_button_rounded"
                android:textSize="@dimen/btn_text_size"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
                android:text="@string/button_text_save"
                android:gravity="center"
                android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
                android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
                android:layout_gravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>